[package]
name = "iced_focus"
version = "0.1.0"
edition = "2018"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
description = "A proc-macro to derive a focus chain for Iced applications"
license = "MIT"
repository = "https://github.com/Kaiden42/iced_focus"
readme = "README.md"
keywords = ["gui", "ui", "graphics", "interface", "focus"]

[[test]]
name = "tests"
path = "tests/collection.rs"

[dependencies]
iced = "0.3.0"
iced_focus_derive = { path = "./iced_focus_derive", version = "0.1.0", optional = true }

[dev-dependencies]
trybuild = "1.0.43"

[features]
derive = ["iced_focus_derive"]

[workspace]
members = [
    "iced_focus_derive",
    "examples/derive",
    "examples/enums",
    "examples/text_input",
]