[package]
name = "iced_focus_derive"
version = "0.1.0"
edition = "2018"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
description = "A proc-macro to derive a focus chain for Iced applications"
license = "MIT"
repository = "https://github.com/Kaiden42/iced_focus"
readme = "../README.md"
keywords = ["gui", "ui", "graphics", "interface", "widgets", "focus"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.28"