[package]
name = "enums"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_focus = { path = "../..", features = ["derive"]}
#iced_focus_derive = { path = "../../iced_focus_derive"}
iced = "0.3.0"
iced_native = "0.4.0"